--- a/app-dev/styles/pages/index.css
+++ b/app-dev/styles/pages/index.css
@@ -167,6 +167,8 @@
 				padding: 4px 0;
 				transition-duration: 0.8s;
 				transition-timing-function: cubic-bezier(0, 0.2, 0.4, 1);
+
+				z-index: 2;
 			}
 			#credit-details-pane .expandable.expanded {
 				width: 850px;
@@ -183,10 +185,23 @@
 				background-color: transparent;
 				}
 
-				_:-ms-fullscreen, :root #credit-details-pane .cast-shadow {
-					left: 0\0;
-					top: 4px\0;
-				}
+			#credit-details-pane .cast-shadow {
+				top: 43%\0;
+				bottom: 43%\0;
+			}
+
+			_:-ms-fullscreen, :root #credit-details-pane .cast-shadow {
+				/* ie11only */
+				top: 4px\0;
+				bottom: 4px\0;
+			}
+
+			#credit-details-pane .expandable.expanded + .cast-shadow {
+				top: 4px;
+				bottom: 4px;
+			}
+
+
 
 
 			#credit-details-pane .docking {
@@ -198,7 +213,8 @@
 				margin: auto 0;
 				width: 0;
 				height: 40px;
-				}
+				z-index: 3;
+			}
 
 
 			#credit-details-pane [class|="corner-deco"] {
@@ -323,17 +339,17 @@
 				text-indent: -3px;
 				}
 
-				#credit-details-pane .expandable.expanded + .docking button {
+				#credit-details-pane .expandable.expanded ~ .docking button {
 					text-indent: -4.5px;
 				}
 
-				#credit-details-pane .expandable + .docking button .iconfont:before {
+				#credit-details-pane .expandable ~ .docking button .iconfont:before {
 					font-size: 12px;
 					line-height: 40px;
 					content: '\e616';
 				}
 
-				#credit-details-pane .expandable.expanded + .docking button .iconfont:before {
+				#credit-details-pane .expandable.expanded ~ .docking button .iconfont:before {
 					content: '\e615';
 				}
 
